test/zinc_source/compile_errors/operators/09_top_level_operator.zn
// expected-error: operator declarations must be inside structs

fn operator+(left, right) -> bool {
    return true
}

fn main() {
}
